fix binnacle version in CI and add missing rbac (#1059)
* ci: pin binnacle executable dependency
* rbac to list kadalu storages
miss from #1057

Signed-off-by: Leela Venkaiah G <leelavg@thoughtexpo.com>

--- a/.github/workflows/on-pr-submit.yml
+++ b/.github/workflows/on-pr-submit.yml
@@ -87,7 +87,8 @@ jobs:
     # CLI Tests
     - name: Install Binnacle and build kubectl-kadalu
       run: |
-        curl -L https://github.com/kadalu/binnacle/releases/latest/download/binnacle -o binnacle
+        # Temporary until https://github.com/kadalu/binnacle/issues/44
+        curl -L https://github.com/kadalu/binnacle/releases/download/0.6.1/binnacle -o binnacle
         chmod +x ./binnacle
         sudo mv ./binnacle /usr/local/bin/binnacle
         binnacle --version
