Change nodeplugin upgrade strategy and introduce postStart hook (#986)
We had two known problems wrt nodeplugin, i.e, reboot and variation of reboot during upgrade. For upgrade our earlier response was to have admin deploy nodeplugin during a maintenance window and drain nodes which was using volumes. We didn't have any specific solution for reboot scenario other than asking deployments to scale down & up.

With the help of users feedback/suggestions, these are solved as below:
1. Set nodeplugin upgrade strategy as `OnDelete`, via this admin can selectively choose which nodeplugin to get upgraded and can delete post operator upgrade, the side effect is nullifying all the effort we put into separating the helm charts. However, having a correct solution is worth the effort rather than leaving it.
2. Use a postStart lifecycle hook on nodeplugin to restart gluster process, this needs a bit of enhancement, however as this is a tested sol going w/ it for now.

Credits:
1. @Compunctus from https://github.com/kadalu/kadalu/issues/913#issuecomment-1322495384
2. @sky-philipalmeida from https://github.com/kadalu/kadalu/pull/645#issuecomment-2082117053

* manual revert of pr#608
* manual revert of pr#615
* change nodeplugin upgrade strategy and add postStart

Signed-off-by: Leela Venkaiah G <leelavg@thoughtexpo.com>

--- a/helm/kadalu/Chart.yaml
+++ b/helm/kadalu/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 name: kadalu
 icon: https://kadalu.io/static/css/logo.png
-description: Contains subchart for deploying Kadalu Operator and Kadalu CSI Nodeplugin
+description: Contains chart for deploying Kadalu Operator
 type: application
 # Value of 'version' will be replaced with correct version on part of release
 version: 0.0.0-0
@@ -11,6 +11,3 @@ dependencies:
   - name: operator
     repository: file://charts/operator
     condition: operator.enabled
-  - name: csi-nodeplugin
-    repository: file://charts/csi-nodeplugin
-    condition: csi-nodeplugin.enabled
