--- a/helm/kadalu/charts/operator/templates/rbac.yaml
+++ b/helm/kadalu/charts/operator/templates/rbac.yaml
@@ -163,6 +163,28 @@ roleRef:
   name: kadalu-csi-external-resizer
   apiGroup: rbac.authorization.k8s.io
 ---
+kind: ClusterRole
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: kadalu-csi-nodeplugin
+rules:
+  - apiGroups: [""]
+    resources: ["events"]
+    verbs: ["get", "list", "watch", "create", "update", "patch"]
+---
+kind: ClusterRoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: kadalu-csi-nodeplugin
+subjects:
+  - kind: ServiceAccount
+    name: kadalu-csi-nodeplugin
+    namespace: {{ .Release.Namespace }}
+roleRef:
+  kind: ClusterRole
+  name: kadalu-csi-nodeplugin
+  apiGroup: rbac.authorization.k8s.io
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
