--- a/manifests/kadalu-operator-rke.yaml
+++ b/manifests/kadalu-operator-rke.yaml
@@ -262,6 +262,16 @@ rules:
     verbs: ["list", "watch", "create", "update", "patch"]
 ---
 # Source: kadalu/charts/operator/templates/rbac.yaml
+kind: ClusterRole
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: kadalu-csi-nodeplugin
+rules:
+  - apiGroups: [""]
+    resources: ["events"]
+    verbs: ["get", "list", "watch", "create", "update", "patch"]
+---
+# Source: kadalu/charts/operator/templates/rbac.yaml
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
@@ -315,6 +325,20 @@ subjects:
 roleRef:
   kind: ClusterRole
   name: kadalu-csi-external-resizer
+  apiGroup: rbac.authorization.k8s.io
+---
+# Source: kadalu/charts/operator/templates/rbac.yaml
+kind: ClusterRoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: kadalu-csi-nodeplugin
+subjects:
+  - kind: ServiceAccount
+    name: kadalu-csi-nodeplugin
+    namespace: kadalu
+roleRef:
+  kind: ClusterRole
+  name: kadalu-csi-nodeplugin
   apiGroup: rbac.authorization.k8s.io
 ---
 # Source: kadalu/charts/operator/templates/rbac.yaml
